--- a/IWeather/app/src/main/res/values/strings.xml
+++ b/IWeather/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">IWeather</string>
     <string name="appid">appid=5979d0b1</string>
+    <string name="AlarmItemDeleteButtonText">删除</string>
 </resources>
